--- a/public/style.css
+++ b/public/style.css
@@ -540,9 +540,170 @@ video {
   margin-left: auto;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.left-40 {
+  left: 10rem;
+}
+
+.left-60 {
+  left: 15rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.top-20 {
+  top: 5rem;
+}
+
+.top-\[22rem\] {
+  top: 22rem;
+}
+
+.top-\[12rem\] {
+  top: 12rem;
+}
+
+.top-\[2rem\] {
+  top: 2rem;
+}
+
+.top-\[3rem\] {
+  top: 3rem;
+}
+
+.top-\[4rem\] {
+  top: 4rem;
+}
+
+.top-\[3\.5rem\] {
+  top: 3.5rem;
+}
+
+.left-64 {
+  left: 16rem;
+}
+
+.left-80 {
+  left: 20rem;
+}
+
+.left-96 {
+  left: 24rem;
+}
+
+.left-\[\] {
+  left: ;
+}
+
+.left-\[370px\] {
+  left: 370px;
+}
+
+.left-\[340px\] {
+  left: 340px;
+}
+
+.left-\[350px\] {
+  left: 350px;
+}
+
+.left-\[360px\] {
+  left: 360px;
+}
+
+.left-\[355px\] {
+  left: 355px;
+}
+
+.left-\[352px\] {
+  left: 352px;
+}
+
+.left-\[353px\] {
+  left: 353px;
+}
+
+.left-\[653px\] {
+  left: 653px;
+}
+
+.left-\[673px\] {
+  left: 673px;
+}
+
+.left-\[703px\] {
+  left: 703px;
+}
+
+.left-\[743px\] {
+  left: 743px;
+}
+
+.left-\[733px\] {
+  left: 733px;
+}
+
+.left-\[723px\] {
+  left: 723px;
+}
+
+.left-\[713px\] {
+  left: 713px;
+}
+
+.left-\[73px\] {
+  left: 73px;
+}
+
+.left-\[7px\] {
+  left: 7px;
+}
+
+.left-\[709px\] {
+  left: 709px;
+}
+
+.left-\[708px\] {
+  left: 708px;
+}
+
+.left-\[707px\] {
+  left: 707px;
+}
+
+.left-\[706px\] {
+  left: 706px;
+}
+
+.left-\[44\.125rem\] {
+  left: 44.125rem;
+}
+
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .block {
@@ -565,8 +726,28 @@ video {
   height: 2.25rem;
 }
 
+.h-\[22rem\] {
+  height: 22rem;
+}
+
 .h-\[72px\] {
   height: 72px;
+}
+
+.h-\[2rem\] {
+  height: 2rem;
+}
+
+.h-\[4rem\] {
+  height: 4rem;
+}
+
+.min-h-\[40rem\] {
+  min-height: 40rem;
+}
+
+.min-h-\[2rem\] {
+  min-height: 2rem;
 }
 
 .w-2\/4 {
@@ -575,6 +756,10 @@ video {
 
 .w-24 {
   width: 6rem;
+}
+
+.w-\[22rem\] {
+  width: 22rem;
 }
 
 .w-full {
@@ -590,12 +775,20 @@ video {
   cursor: pointer;
 }
 
+.cursor-default {
+  cursor: default;
+}
+
 .items-center {
   align-items: center;
 }
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-3 {
@@ -610,14 +803,6 @@ video {
   gap: 1.25rem;
 }
 
-.gap-6 {
-  gap: 1.5rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
-}
-
 .rounded-3xl {
   border-radius: 1.5rem;
 }
@@ -626,9 +811,31 @@ video {
   border-width: 1px;
 }
 
+.border-r {
+  border-right-width: 1px;
+}
+
+.border-l {
+  border-left-width: 1px;
+}
+
+.border-\[\#\] {
+  border-color: #;
+}
+
+.border-\[\#d1d7dc\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 215 220 / var(--tw-border-opacity));
+}
+
 .bg-\[\#1c1d1f\] {
   --tw-bg-opacity: 1;
   background-color: rgb(28 29 31 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#fff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-gray-secondary {
@@ -636,14 +843,28 @@ video {
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#ffff\] {
+  background-color: #ffff;
+}
+
+.bg-\[\#000\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
 
-.px-\[12px\] {
-  padding-left: 12px;
-  padding-right: 12px;
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-\[15px\] {
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .py-2 {
@@ -651,9 +872,12 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.px-\[15px\] {
-  padding-left: 15px;
-  padding-right: 15px;
+.pt-14 {
+  padding-top: 3.5rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .text-\[15px\] {
@@ -685,9 +909,19 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 *{
@@ -712,17 +946,7 @@ video {
   color: rgb(107 63 214 / var(--tw-text-opacity));
 }
 
-@media (min-width: 640px) {
-  .sm\:hidden {
-    display: none;
-  }
-}
-
 @media (min-width: 768px) {
-  .md\:block {
-    display: block;
-  }
-
   .md\:flex {
     display: flex;
   }
