--- a/public/style.css
+++ b/public/style.css
@@ -552,148 +552,28 @@ video {
   left: 0px;
 }
 
+.left-\[286px\] {
+  left: 286px;
+}
+
+.left-\[35\.8312rem\] {
+  left: 35.8312rem;
+}
+
 .top-0 {
   top: 0px;
-}
-
-.left-40 {
-  left: 10rem;
-}
-
-.left-60 {
-  left: 15rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.top-\[22rem\] {
-  top: 22rem;
-}
-
-.top-\[12rem\] {
-  top: 12rem;
-}
-
-.top-\[2rem\] {
-  top: 2rem;
-}
-
-.top-\[3rem\] {
-  top: 3rem;
-}
-
-.top-\[4rem\] {
-  top: 4rem;
 }
 
 .top-\[3\.5rem\] {
   top: 3.5rem;
 }
 
-.left-64 {
-  left: 16rem;
+.z-10 {
+  z-index: 10;
 }
 
-.left-80 {
-  left: 20rem;
-}
-
-.left-96 {
-  left: 24rem;
-}
-
-.left-\[\] {
-  left: ;
-}
-
-.left-\[370px\] {
-  left: 370px;
-}
-
-.left-\[340px\] {
-  left: 340px;
-}
-
-.left-\[350px\] {
-  left: 350px;
-}
-
-.left-\[360px\] {
-  left: 360px;
-}
-
-.left-\[355px\] {
-  left: 355px;
-}
-
-.left-\[352px\] {
-  left: 352px;
-}
-
-.left-\[353px\] {
-  left: 353px;
-}
-
-.left-\[653px\] {
-  left: 653px;
-}
-
-.left-\[673px\] {
-  left: 673px;
-}
-
-.left-\[703px\] {
-  left: 703px;
-}
-
-.left-\[743px\] {
-  left: 743px;
-}
-
-.left-\[733px\] {
-  left: 733px;
-}
-
-.left-\[723px\] {
-  left: 723px;
-}
-
-.left-\[713px\] {
-  left: 713px;
-}
-
-.left-\[73px\] {
-  left: 73px;
-}
-
-.left-\[7px\] {
-  left: 7px;
-}
-
-.left-\[709px\] {
-  left: 709px;
-}
-
-.left-\[708px\] {
-  left: 708px;
-}
-
-.left-\[707px\] {
-  left: 707px;
-}
-
-.left-\[706px\] {
-  left: 706px;
-}
-
-.left-\[44\.125rem\] {
-  left: 44.125rem;
+.z-20 {
+  z-index: 20;
 }
 
 .mx-3 {
@@ -726,28 +606,12 @@ video {
   height: 2.25rem;
 }
 
-.h-\[22rem\] {
-  height: 22rem;
-}
-
 .h-\[72px\] {
   height: 72px;
 }
 
-.h-\[2rem\] {
-  height: 2rem;
-}
-
-.h-\[4rem\] {
-  height: 4rem;
-}
-
 .min-h-\[40rem\] {
   min-height: 40rem;
-}
-
-.min-h-\[2rem\] {
-  min-height: 2rem;
 }
 
 .w-2\/4 {
@@ -758,8 +622,8 @@ video {
   width: 6rem;
 }
 
-.w-\[22rem\] {
-  width: 22rem;
+.w-\[18rem\] {
+  width: 18rem;
 }
 
 .w-full {
@@ -771,12 +635,12 @@ video {
   min-width: max-content;
 }
 
-.cursor-pointer {
-  cursor: pointer;
-}
-
 .cursor-default {
   cursor: default;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .items-center {
@@ -815,14 +679,6 @@ video {
   border-right-width: 1px;
 }
 
-.border-l {
-  border-left-width: 1px;
-}
-
-.border-\[\#\] {
-  border-color: #;
-}
-
 .border-\[\#d1d7dc\] {
   --tw-border-opacity: 1;
   border-color: rgb(209 215 220 / var(--tw-border-opacity));
@@ -838,18 +694,13 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-secondary {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#ffff\] {
   background-color: #ffff;
 }
 
-.bg-\[\#000\] {
+.bg-gray-secondary {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
 .px-2 {
@@ -860,6 +711,11 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .px-\[15px\] {
@@ -888,6 +744,11 @@ video {
   font-weight: 700;
 }
 
+.text-\[\#73777b\] {
+  --tw-text-opacity: 1;
+  color: rgb(115 119 123 / var(--tw-text-opacity));
+}
+
 .text-\[\#fff\] {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -909,9 +770,9 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+.shadow-custom {
+  --tw-shadow:   0px 9px 15px -3px rgba(0,0,0,0.1);
+  --tw-shadow-colored: 0px 9px 15px -3px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -939,6 +800,11 @@ video {
 
 .hover\:bg-opacity-80:hover {
   --tw-bg-opacity: 0.8;
+}
+
+.hover\:text-\[\#73777b\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(115 119 123 / var(--tw-text-opacity));
 }
 
 .hover\:text-activeClr:hover {
