--- a/public/style.css
+++ b/public/style.css
@@ -540,6 +540,10 @@ video {
   margin-left: auto;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -568,12 +572,88 @@ video {
   top: 3.5rem;
 }
 
+.left-4 {
+  left: 1rem;
+}
+
+.left-40 {
+  left: 10rem;
+}
+
+.left-9 {
+  left: 2.25rem;
+}
+
+.left-96 {
+  left: 24rem;
+}
+
+.left-80 {
+  left: 20rem;
+}
+
+.left-8 {
+  left: 2rem;
+}
+
+.left-\[\] {
+  left: ;
+}
+
+.left-\[250px\] {
+  left: 250px;
+}
+
+.left-\[280px\] {
+  left: 280px;
+}
+
+.left-\[290px\] {
+  left: 290px;
+}
+
+.left-\[340px\] {
+  left: 340px;
+}
+
+.left-\[320px\] {
+  left: 320px;
+}
+
+.left-\[330px\] {
+  left: 330px;
+}
+
+.top-40 {
+  top: 10rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.top-20 {
+  top: 5rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.left-\[310px\] {
+  left: 310px;
+}
+
 .z-10 {
   z-index: 10;
 }
 
 .z-20 {
   z-index: 20;
+}
+
+.-z-10 {
+  z-index: -10;
 }
 
 .mx-3 {
@@ -584,6 +664,32 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.ms-2 {
+  -webkit-margin-start: 0.5rem;
+          margin-inline-start: 0.5rem;
+}
+
+.ms-4 {
+  -webkit-margin-start: 1rem;
+          margin-inline-start: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .block {
@@ -610,6 +716,30 @@ video {
   height: 72px;
 }
 
+.h-full {
+  height: 100%;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
 .min-h-\[40rem\] {
   min-height: 40rem;
 }
@@ -630,6 +760,46 @@ video {
   width: 100%;
 }
 
+.w-\[280px\] {
+  width: 280px;
+}
+
+.w-\[17\.5rem\] {
+  width: 17.5rem;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-14 {
+  width: 3.5rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[\$\{\}\] {
+  width: ${};
+}
+
+.w-\[140px\] {
+  width: 140px;
+}
+
 .min-w-max {
   min-width: -moz-max-content;
   min-width: max-content;
@@ -645,6 +815,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
@@ -671,12 +845,20 @@ video {
   border-radius: 1.5rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .border {
   border-width: 1px;
 }
 
 .border-r {
   border-right-width: 1px;
+}
+
+.border-t {
+  border-top-width: 1px;
 }
 
 .border-\[\#d1d7dc\] {
@@ -701,6 +883,52 @@ video {
 .bg-gray-secondary {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+
+.bg-\[black\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#00000041\] {
+  background-color: #00000041;
+}
+
+.bg-\[\#0000006c\] {
+  background-color: #0000006c;
+}
+
+.bg-\[\#494a4c\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(73 74 76 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#494a4ca2\] {
+  background-color: #494a4ca2;
+}
+
+.bg-\[\#494a4cc2\] {
+  background-color: #494a4cc2;
+}
+
+.bg-\[\#02050cc2\] {
+  background-color: #02050cc2;
+}
+
+.bg-\[\#02050c75\] {
+  background-color: #02050c75;
+}
+
+.bg-\[\#02050c85\] {
+  background-color: #02050c85;
+}
+
+.p-5 {
+  padding: 1.25rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-2 {
@@ -728,6 +956,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .pt-14 {
   padding-top: 3.5rem;
 }
@@ -740,8 +973,45 @@ video {
   font-size: 15px;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.font-\[500\] {
+  font-weight: 500;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .text-\[\#73777b\] {
@@ -762,6 +1032,16 @@ video {
 .text-mainTextClr {
   --tw-text-opacity: 1;
   color: rgb(28 29 31 / var(--tw-text-opacity));
+}
+
+.text-activeClr {
+  --tw-text-opacity: 1;
+  color: rgb(107 63 214 / var(--tw-text-opacity));
+}
+
+.text-\[\#6a6f73\] {
+  --tw-text-opacity: 1;
+  color: rgb(106 111 115 / var(--tw-text-opacity));
 }
 
 .shadow-2xl {
@@ -813,6 +1093,10 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:block {
+    display: block;
+  }
+
   .md\:flex {
     display: flex;
   }
