--- a/public/style.css
+++ b/public/style.css
@@ -540,6 +540,14 @@ video {
   margin-left: auto;
 }
 
+.visible {
+  visibility: visible;
+}
+
+.invisible {
+  visibility: hidden;
+}
+
 .fixed {
   position: fixed;
 }
@@ -560,6 +568,10 @@ video {
   left: 286px;
 }
 
+.left-\[310px\] {
+  left: 310px;
+}
+
 .left-\[35\.8312rem\] {
   left: 35.8312rem;
 }
@@ -568,80 +580,60 @@ video {
   top: 0px;
 }
 
+.top-10 {
+  top: 2.5rem;
+}
+
 .top-\[3\.5rem\] {
   top: 3.5rem;
 }
 
-.left-4 {
-  left: 1rem;
+.left-32 {
+  left: 8rem;
 }
 
-.left-40 {
-  left: 10rem;
+.left-2 {
+  left: 0.5rem;
 }
 
-.left-9 {
-  left: 2.25rem;
-}
-
-.left-96 {
-  left: 24rem;
-}
-
-.left-80 {
-  left: 20rem;
-}
-
-.left-8 {
-  left: 2rem;
-}
-
-.left-\[\] {
-  left: ;
-}
-
-.left-\[250px\] {
-  left: 250px;
+.left-\[200px\] {
+  left: 200px;
 }
 
 .left-\[280px\] {
   left: 280px;
 }
 
+.left-\[230px\] {
+  left: 230px;
+}
+
 .left-\[290px\] {
   left: 290px;
 }
 
-.left-\[340px\] {
-  left: 340px;
+.left-\[90px\] {
+  left: 90px;
 }
 
-.left-\[320px\] {
-  left: 320px;
+.-left-20 {
+  left: -5rem;
 }
 
-.left-\[330px\] {
-  left: 330px;
+.-left-10 {
+  left: -2.5rem;
 }
 
-.top-40 {
-  top: 10rem;
+.left-20 {
+  left: 5rem;
 }
 
-.top-2 {
-  top: 0.5rem;
+.-left-40 {
+  left: -10rem;
 }
 
-.top-20 {
-  top: 5rem;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.left-\[310px\] {
-  left: 310px;
+.-left-80 {
+  left: -20rem;
 }
 
 .z-10 {
@@ -650,10 +642,6 @@ video {
 
 .z-20 {
   z-index: 20;
-}
-
-.-z-10 {
-  z-index: -10;
 }
 
 .mx-3 {
@@ -666,21 +654,8 @@ video {
   margin-right: auto;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.ms-2 {
-  -webkit-margin-start: 0.5rem;
-          margin-inline-start: 0.5rem;
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .ms-4 {
@@ -688,8 +663,8 @@ video {
           margin-inline-start: 1rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .block {
@@ -700,12 +675,20 @@ video {
   display: flex;
 }
 
+.table {
+  display: table;
+}
+
 .hidden {
   display: none;
 }
 
 .h-12 {
   height: 3rem;
+}
+
+.h-14 {
+  height: 3.5rem;
 }
 
 .h-9 {
@@ -720,28 +703,32 @@ video {
   height: 100%;
 }
 
-.h-10 {
-  height: 2.5rem;
+.h-3 {
+  height: 0.75rem;
 }
 
-.h-20 {
-  height: 5rem;
+.h-32 {
+  height: 8rem;
 }
 
-.h-1 {
-  height: 0.25rem;
+.h-\[120px\] {
+  height: 120px;
 }
 
-.h-16 {
-  height: 4rem;
+.h-\[220px\] {
+  height: 220px;
 }
 
-.h-14 {
-  height: 3.5rem;
+.h-\[f\] {
+  height: f;
 }
 
 .min-h-\[40rem\] {
   min-height: 40rem;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .w-2\/4 {
@@ -752,6 +739,14 @@ video {
   width: 6rem;
 }
 
+.w-\[140px\] {
+  width: 140px;
+}
+
+.w-\[17\.5rem\] {
+  width: 17.5rem;
+}
+
 .w-\[18rem\] {
   width: 18rem;
 }
@@ -760,49 +755,61 @@ video {
   width: 100%;
 }
 
-.w-\[280px\] {
-  width: 280px;
+.w-3\/4 {
+  width: 75%;
 }
 
-.w-\[17\.5rem\] {
-  width: 17.5rem;
+.w-32 {
+  width: 8rem;
 }
 
-.w-10 {
-  width: 2.5rem;
+.w-8 {
+  width: 2rem;
 }
 
-.w-20 {
-  width: 5rem;
+.w-80 {
+  width: 20rem;
 }
 
-.w-1 {
-  width: 0.25rem;
+.w-7 {
+  width: 1.75rem;
 }
 
-.w-14 {
-  width: 3.5rem;
-}
-
-.w-16 {
-  width: 4rem;
+.w-72 {
+  width: 18rem;
 }
 
 .w-\[\] {
   width: ;
 }
 
-.w-\[\$\{\}\] {
-  width: ${};
+.w-\[278px\] {
+  width: 278px;
 }
 
-.w-\[140px\] {
-  width: 140px;
+.w-\[280px\] {
+  width: 280px;
+}
+
+.w-\[12\.5rem\] {
+  width: 12.5rem;
 }
 
 .min-w-max {
   min-width: -moz-max-content;
   min-width: max-content;
+}
+
+.max-w-\[\] {
+  max-width: ;
+}
+
+.max-w-\[1400\] {
+  max-width: 1400;
+}
+
+.max-w-\[1400px\] {
+  max-width: 1400px;
 }
 
 .cursor-default {
@@ -841,6 +848,18 @@ video {
   gap: 1.25rem;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
+.scroll-smooth {
+  scroll-behavior: smooth;
+}
+
 .rounded-3xl {
   border-radius: 1.5rem;
 }
@@ -866,6 +885,10 @@ video {
   border-color: rgb(209 215 220 / var(--tw-border-opacity));
 }
 
+.bg-\[\#02050c85\] {
+  background-color: #02050c85;
+}
+
 .bg-\[\#1c1d1f\] {
   --tw-bg-opacity: 1;
   background-color: rgb(28 29 31 / var(--tw-bg-opacity));
@@ -885,46 +908,14 @@ video {
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
-.bg-\[black\] {
+.bg-\[red\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#00000041\] {
-  background-color: #00000041;
-}
-
-.bg-\[\#0000006c\] {
-  background-color: #0000006c;
-}
-
-.bg-\[\#494a4c\] {
+.bg-\[\#f7f9fa\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(73 74 76 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#494a4ca2\] {
-  background-color: #494a4ca2;
-}
-
-.bg-\[\#494a4cc2\] {
-  background-color: #494a4cc2;
-}
-
-.bg-\[\#02050cc2\] {
-  background-color: #02050cc2;
-}
-
-.bg-\[\#02050c75\] {
-  background-color: #02050c75;
-}
-
-.bg-\[\#02050c85\] {
-  background-color: #02050c85;
-}
-
-.p-5 {
-  padding: 1.25rem;
+  background-color: rgb(247 249 250 / var(--tw-bg-opacity));
 }
 
 .p-4 {
@@ -973,18 +964,8 @@ video {
   font-size: 15px;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-lg {
   font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
@@ -993,25 +974,17 @@ video {
   line-height: 1.25rem;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
 
-.font-\[500\] {
-  font-weight: 500;
-}
-
-.font-medium {
-  font-weight: 500;
-}
-
 .font-normal {
   font-weight: 400;
+}
+
+.text-\[\#6a6f73\] {
+  --tw-text-opacity: 1;
+  color: rgb(106 111 115 / var(--tw-text-opacity));
 }
 
 .text-\[\#73777b\] {
@@ -1024,6 +997,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-activeClr {
+  --tw-text-opacity: 1;
+  color: rgb(107 63 214 / var(--tw-text-opacity));
+}
+
 .text-disableColor {
   --tw-text-opacity: 1;
   color: rgb(137 139 141 / var(--tw-text-opacity));
@@ -1034,14 +1012,26 @@ video {
   color: rgb(28 29 31 / var(--tw-text-opacity));
 }
 
-.text-activeClr {
+.text-\[\#2d2f31\] {
   --tw-text-opacity: 1;
-  color: rgb(107 63 214 / var(--tw-text-opacity));
+  color: rgb(45 47 49 / var(--tw-text-opacity));
 }
 
-.text-\[\#6a6f73\] {
+.text-\[\#red\] {
+  color: #red;
+}
+
+.text-\[red\] {
   --tw-text-opacity: 1;
-  color: rgb(106 111 115 / var(--tw-text-opacity));
+  color: rgb(255 0 0 / var(--tw-text-opacity));
+}
+
+.opacity-0 {
+  opacity: 0;
+}
+
+.opacity-100 {
+  opacity: 1;
 }
 
 .shadow-2xl {
@@ -1065,8 +1055,66 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.delay-200 {
+  transition-delay: 200ms;
+}
+
+.delay-300 {
+  transition-delay: 300ms;
+}
+
+.delay-1000 {
+  transition-delay: 1000ms;
+}
+
+.delay-100 {
+  transition-delay: 100ms;
+}
+
+.delay-500 {
+  transition-delay: 500ms;
+}
+
+.delay-\[50\] {
+  transition-delay: 50;
+}
+
+.delay-\[50ms\] {
+  transition-delay: 50ms;
+}
+
+.delay-\[150ms\] {
+  transition-delay: 150ms;
+}
+
+.delay-75 {
+  transition-delay: 75ms;
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.ease-linear {
+  transition-timing-function: linear;
+}
+
 *{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:container {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 
 .hover\:cursor-not-allowed:hover {
@@ -1092,7 +1140,17 @@ video {
   color: rgb(107 63 214 / var(--tw-text-opacity));
 }
 
+@media (min-width: 640px) {
+  .sm\:hidden {
+    display: none;
+  }
+}
+
 @media (min-width: 768px) {
+  .md\:static {
+    position: static;
+  }
+
   .md\:block {
     display: block;
   }
