--- a/public/style.css
+++ b/public/style.css
@@ -568,6 +568,10 @@ video {
   left: 0px;
 }
 
+.left-16 {
+  left: 4rem;
+}
+
 .left-\[280px\] {
   left: 280px;
 }
@@ -596,20 +600,24 @@ video {
   top: 3.5rem;
 }
 
+.top-6 {
+  top: 1.5rem;
+}
+
+.top-3 {
+  top: 0.75rem;
+}
+
+.top-4 {
+  top: 1rem;
+}
+
 .z-10 {
   z-index: 10;
 }
 
 .z-20 {
   z-index: 20;
-}
-
-.z-0 {
-  z-index: 0;
-}
-
-.-z-10 {
-  z-index: -10;
 }
 
 .mx-3 {
@@ -633,6 +641,24 @@ video {
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+
+.line-clamp-none {
+  overflow: visible;
+  display: block;
+  -webkit-box-orient: horizontal;
+  -webkit-line-clamp: none;
 }
 
 .block {
@@ -659,10 +685,6 @@ video {
   height: 2.25rem;
 }
 
-.h-\[200vh\] {
-  height: 200vh;
-}
-
 .h-\[72px\] {
   height: 72px;
 }
@@ -687,6 +709,10 @@ video {
   width: 75%;
 }
 
+.w-7 {
+  width: 1.75rem;
+}
+
 .w-\[140px\] {
   width: 140px;
 }
@@ -703,6 +729,10 @@ video {
   width: 280px;
 }
 
+.w-\[400px\] {
+  width: 400px;
+}
+
 .w-full {
   width: 100%;
 }
@@ -710,6 +740,10 @@ video {
 .min-w-max {
   min-width: -moz-max-content;
   min-width: max-content;
+}
+
+.max-w-\[1340px\] {
+  max-width: 1340px;
 }
 
 .cursor-default {
@@ -758,6 +792,14 @@ video {
 
 .scroll-smooth {
   scroll-behavior: smooth;
+}
+
+.text-ellipsis {
+  text-overflow: ellipsis;
+}
+
+.text-clip {
+  text-overflow: clip;
 }
 
 .rounded-3xl {
@@ -813,8 +855,25 @@ video {
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#202020\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(32 32 32 / var(--tw-bg-opacity));
+}
+
 .p-4 {
   padding: 1rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-4 {
@@ -850,6 +909,15 @@ video {
   padding-top: 0.5rem;
 }
 
+.font-SusseWorks {
+  font-family: SusseWorks;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .text-\[15px\] {
   font-size: 15px;
 }
@@ -875,6 +943,11 @@ video {
 .text-\[\#2d2f31\] {
   --tw-text-opacity: 1;
   color: rgb(45 47 49 / var(--tw-text-opacity));
+}
+
+.text-\[\#2d3f52\] {
+  --tw-text-opacity: 1;
+  color: rgb(45 63 82 / var(--tw-text-opacity));
 }
 
 .text-\[\#6a6f73\] {
@@ -907,15 +980,26 @@ video {
   color: rgb(28 29 31 / var(--tw-text-opacity));
 }
 
-.shadow-2xl {
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.text-\[white\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .shadow-custom {
   --tw-shadow:   0px 9px 15px -3px rgba(0,0,0,0.1);
   --tw-shadow-colored: 0px 9px 15px -3px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -934,6 +1018,18 @@ video {
   transition-duration: 150ms;
 }
 
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.delay-200 {
+  transition-delay: 200ms;
+}
+
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -946,13 +1042,33 @@ video {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+@font-face {
+  font-family: SusseWorks;
+
+  src: url(../public/Fonts/SuisseWorks-Bold-v1.woff2);
+}
+
 .hover\:cursor-not-allowed:hover {
   cursor: not-allowed;
+}
+
+.hover\:bg-\[\#e0e0e0\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 224 224 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-gray-secondary:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[000000\]:hover {
+  background-color: 000000;
+}
+
+.hover\:bg-\[\#000000\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-opacity-80:hover {
@@ -969,13 +1085,79 @@ video {
   color: rgb(107 63 214 / var(--tw-text-opacity));
 }
 
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+@media (max-width: 1200px) {
+  .max-\[1200px\]\:top-16 {
+    top: 4rem;
+  }
+}
+
+@media (max-width: 982px) {
+  .max-\[982px\]\:w-\[340px\] {
+    width: 340px;
+  }
+
+  .max-\[982px\]\:w-\[400px\] {
+    width: 400px;
+  }
+
+  .max-\[982px\]\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .max-\[982px\]\:text-\[20px\] {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 700px) {
+  .max-\[700px\]\:hidden {
+    display: none;
+  }
+}
+
+@media (min-width: 640px) {
+  .sm\:visible {
+    visibility: visible;
+  }
+
+  .sm\:line-clamp-1 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+  }
+}
+
+@media (min-width: 700px) {
+  .min-\[700px\]\:hidden {
+    display: none;
+  }
+}
+
 @media (min-width: 768px) {
+  .md\:line-clamp-none {
+    overflow: visible;
+    display: block;
+    -webkit-box-orient: horizontal;
+    -webkit-line-clamp: none;
+  }
+
   .md\:flex {
     display: flex;
   }
 
   .md\:hidden {
     display: none;
+  }
+
+  .md\:w-\[440px\] {
+    width: 440px;
   }
 
   .md\:justify-normal {
@@ -987,15 +1169,56 @@ video {
   }
 }
 
+@media (min-width: 982px) {
+  .min-\[982px\]\:top-10 {
+    top: 2.5rem;
+  }
+
+  .min-\[982px\]\:w-\[340\] {
+    width: 340;
+  }
+
+  .min-\[982px\]\:w-\[340px\] {
+    width: 340px;
+  }
+}
+
 @media (min-width: 1024px) {
+  .lg\:top-16 {
+    top: 4rem;
+  }
+
+  .lg\:line-clamp-none {
+    overflow: visible;
+    display: block;
+    -webkit-box-orient: horizontal;
+    -webkit-line-clamp: none;
+  }
+
   .lg\:block {
     display: block;
   }
 }
 
+@media (min-width: 1200px) {
+  .min-\[1200px\]\:top-16 {
+    top: 4rem;
+  }
+
+  .min-\[1200px\]\:w-\[440px\] {
+    width: 440px;
+  }
+}
+
 @media (min-width: 1280px) {
+  .xl\:line-clamp-none {
+    overflow: visible;
+    display: block;
+    -webkit-box-orient: horizontal;
+    -webkit-line-clamp: none;
+  }
+
   .xl\:block {
     display: block;
   }
 }
-
