--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -7,3 +7,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+@font-face {
+    font-family: SusseWorks;
+    src: url(../public/Fonts/SuisseWorks-Bold-v1.woff2);
+}
