--- a/public/style.css
+++ b/public/style.css
@@ -572,20 +572,12 @@ video {
   left: 4rem;
 }
 
-.left-\[280px\] {
-  left: 280px;
+.left-72 {
+  left: 18rem;
 }
 
-.left-\[286px\] {
-  left: 286px;
-}
-
-.left-\[310px\] {
-  left: 310px;
-}
-
-.left-\[35\.8312rem\] {
-  left: 35.8312rem;
+.left-80 {
+  left: 20rem;
 }
 
 .top-0 {
@@ -596,28 +588,16 @@ video {
   top: 2.5rem;
 }
 
-.top-\[3\.5rem\] {
-  top: 3.5rem;
-}
-
-.top-6 {
-  top: 1.5rem;
-}
-
 .top-3 {
   top: 0.75rem;
 }
 
-.top-4 {
-  top: 1rem;
+.\!-left-80 {
+  left: -20rem !important;
 }
 
 .z-10 {
   z-index: 10;
-}
-
-.z-20 {
-  z-index: 20;
 }
 
 .mx-3 {
@@ -630,35 +610,17 @@ video {
   margin-right: auto;
 }
 
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
 
-.ms-4 {
-  -webkit-margin-start: 1rem;
-          margin-inline-start: 1rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
 .mt-4 {
   margin-top: 1rem;
-}
-
-.line-clamp-1 {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
-}
-
-.line-clamp-none {
-  overflow: visible;
-  display: block;
-  -webkit-box-orient: horizontal;
-  -webkit-line-clamp: none;
 }
 
 .block {
@@ -693,8 +655,8 @@ video {
   height: 100%;
 }
 
-.min-h-\[40rem\] {
-  min-height: 40rem;
+.min-h-\[600px\] {
+  min-height: 600px;
 }
 
 .w-14 {
@@ -709,24 +671,12 @@ video {
   width: 75%;
 }
 
-.w-7 {
-  width: 1.75rem;
-}
-
-.w-\[140px\] {
-  width: 140px;
-}
-
-.w-\[17\.5rem\] {
-  width: 17.5rem;
+.w-72 {
+  width: 18rem;
 }
 
 .w-\[18rem\] {
   width: 18rem;
-}
-
-.w-\[280px\] {
-  width: 280px;
 }
 
 .w-\[400px\] {
@@ -735,6 +685,22 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-52 {
+  width: 13rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-44 {
+  width: 11rem;
 }
 
 .min-w-max {
@@ -746,12 +712,31 @@ video {
   max-width: 1340px;
 }
 
+.max-w-\[280px\] {
+  max-width: 280px;
+}
+
+.rotate-180 {
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-0 {
+  --tw-scale-x: 0;
+  --tw-scale-y: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .cursor-default {
   cursor: default;
 }
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.resize {
+  resize: both;
 }
 
 .items-center {
@@ -794,14 +779,6 @@ video {
   scroll-behavior: smooth;
 }
 
-.text-ellipsis {
-  text-overflow: ellipsis;
-}
-
-.text-clip {
-  text-overflow: clip;
-}
-
 .rounded-3xl {
   border-radius: 1.5rem;
 }
@@ -814,21 +791,21 @@ video {
   border-width: 1px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-r {
   border-right-width: 1px;
 }
 
-.border-t {
-  border-top-width: 1px;
-}
-
-.border-\[\#d1d7dc\] {
+.border-border {
   --tw-border-opacity: 1;
   border-color: rgb(209 215 220 / var(--tw-border-opacity));
 }
 
-.bg-\[\#02050c85\] {
-  background-color: #02050c85;
+.bg-\[\#1a1919bd\] {
+  background-color: #1a1919bd;
 }
 
 .bg-\[\#1c1d1f\] {
@@ -836,9 +813,9 @@ video {
   background-color: rgb(28 29 31 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#f7f9fa\] {
+.bg-\[\#202020\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(247 249 250 / var(--tw-bg-opacity));
+  background-color: rgb(32 32 32 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#fff\] {
@@ -846,18 +823,18 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#ffff\] {
-  background-color: #ffff;
-}
-
 .bg-gray-secondary {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#202020\] {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(32 32 32 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .p-4 {
@@ -866,14 +843,6 @@ video {
 
 .p-6 {
   padding: 1.5rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
 }
 
 .px-4 {
@@ -886,11 +855,6 @@ video {
   padding-right: 1.25rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
 .px-\[15px\] {
   padding-left: 15px;
   padding-right: 15px;
@@ -899,6 +863,11 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pt-14 {
@@ -936,8 +905,9 @@ video {
   font-weight: 700;
 }
 
-.font-normal {
-  font-weight: 400;
+.text-\[\#000\] {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-\[\#2d2f31\] {
@@ -955,12 +925,12 @@ video {
   color: rgb(106 111 115 / var(--tw-text-opacity));
 }
 
-.text-\[\#73777b\] {
+.text-\[\#fff\] {
   --tw-text-opacity: 1;
-  color: rgb(115 119 123 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\#fff\] {
+.text-\[white\] {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -980,20 +950,15 @@ video {
   color: rgb(28 29 31 / var(--tw-text-opacity));
 }
 
-.text-\[white\] {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.shadow-custom {
-  --tw-shadow:   0px 9px 15px -3px rgba(0,0,0,0.1);
-  --tw-shadow-colored: 0px 9px 15px -3px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1012,12 +977,6 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.transition-all {
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1026,44 +985,50 @@ video {
   transition-duration: 150ms;
 }
 
-.delay-200 {
-  transition-delay: 200ms;
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
 }
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.ease-linear {
-  transition-timing-function: linear;
-}
-
-*{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
 @font-face {
-  font-family: SusseWorks;
+  font-family: SusseWorks ;
 
   src: url(../public/Fonts/SuisseWorks-Bold-v1.woff2);
 }
 
+.PopDown{
+  animation: PopDown 1s ;
+}
+
+@keyframes PopDown {
+  0% {
+    scale: 0.8;
+  }
+
+  10% {
+    scale: 1;
+  }
+}
+
 .hover\:cursor-not-allowed:hover {
   cursor: not-allowed;
-}
-
-.hover\:bg-\[\#e0e0e0\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(224 224 224 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-secondary:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[000000\]:hover {
-  background-color: 000000;
 }
 
 .hover\:bg-\[\#000000\]:hover {
@@ -1071,13 +1036,13 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-opacity-80:hover {
-  --tw-bg-opacity: 0.8;
+.hover\:bg-gray-secondary:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
-.hover\:text-\[\#73777b\]:hover {
-  --tw-text-opacity: 1;
-  color: rgb(115 119 123 / var(--tw-text-opacity));
+.hover\:bg-opacity-80:hover {
+  --tw-bg-opacity: 0.8;
 }
 
 .hover\:text-activeClr:hover {
@@ -1090,9 +1055,9 @@ video {
   outline-offset: 2px;
 }
 
-@media (max-width: 1200px) {
-  .max-\[1200px\]\:top-16 {
-    top: 4rem;
+@media (max-width: 1010px) {
+  .max-\[1010px\]\:hidden {
+    display: none;
   }
 }
 
@@ -1101,17 +1066,13 @@ video {
     width: 340px;
   }
 
-  .max-\[982px\]\:w-\[400px\] {
-    width: 400px;
+  .max-\[982px\]\:text-\[20px\] {
+    font-size: 20px;
   }
 
   .max-\[982px\]\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .max-\[982px\]\:text-\[20px\] {
-    font-size: 20px;
   }
 }
 
@@ -1134,30 +1095,13 @@ video {
   }
 }
 
-@media (min-width: 700px) {
-  .min-\[700px\]\:hidden {
-    display: none;
-  }
-}
-
 @media (min-width: 768px) {
-  .md\:line-clamp-none {
-    overflow: visible;
-    display: block;
-    -webkit-box-orient: horizontal;
-    -webkit-line-clamp: none;
-  }
-
   .md\:flex {
     display: flex;
   }
 
   .md\:hidden {
     display: none;
-  }
-
-  .md\:w-\[440px\] {
-    width: 440px;
   }
 
   .md\:justify-normal {
@@ -1173,21 +1117,9 @@ video {
   .min-\[982px\]\:top-10 {
     top: 2.5rem;
   }
-
-  .min-\[982px\]\:w-\[340\] {
-    width: 340;
-  }
-
-  .min-\[982px\]\:w-\[340px\] {
-    width: 340px;
-  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:top-16 {
-    top: 4rem;
-  }
-
   .lg\:line-clamp-none {
     overflow: visible;
     display: block;
@@ -1211,13 +1143,6 @@ video {
 }
 
 @media (min-width: 1280px) {
-  .xl\:line-clamp-none {
-    overflow: visible;
-    display: block;
-    -webkit-box-orient: horizontal;
-    -webkit-line-clamp: none;
-  }
-
   .xl\:block {
     display: block;
   }
