udemy test all categories

--- a/public/style.css
+++ b/public/style.css
@@ -560,8 +560,8 @@ video {
   position: relative;
 }
 
-.-left-80 {
-  left: -20rem;
+.\!-left-80 {
+  left: -20rem !important;
 }
 
 .left-0 {
@@ -592,12 +592,16 @@ video {
   top: 0.75rem;
 }
 
-.\!-left-80 {
-  left: -20rem !important;
-}
-
 .z-10 {
   z-index: 10;
+}
+
+.z-30 {
+  z-index: 30;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .mx-3 {
@@ -605,14 +609,14 @@ video {
   margin-right: 0.75rem;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mb-2 {
@@ -671,6 +675,10 @@ video {
   width: 75%;
 }
 
+.w-44 {
+  width: 11rem;
+}
+
 .w-72 {
   width: 18rem;
 }
@@ -685,22 +693,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-52 {
-  width: 13rem;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
-.w-44 {
-  width: 11rem;
 }
 
 .min-w-max {
@@ -870,6 +862,16 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
 .pt-14 {
   padding-top: 3.5rem;
 }
@@ -889,11 +891,6 @@ video {
 
 .text-\[15px\] {
   font-size: 15px;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .text-sm {
