--- a/public/style.css
+++ b/public/style.css
@@ -584,6 +584,10 @@ video {
   left: 20rem;
 }
 
+.left-\[16rem\] {
+  left: 16rem;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -596,36 +600,40 @@ video {
   top: 2.5rem;
 }
 
-.top-14 {
-  top: 3.5rem;
-}
-
 .top-3 {
   top: 0.75rem;
-}
-
-.top-12 {
-  top: 3rem;
-}
-
-.top-\[50px\] {
-  top: 50px;
-}
-
-.top-1 {
-  top: 0.25rem;
 }
 
 .top-7 {
   top: 1.75rem;
 }
 
-.top-4 {
-  top: 1rem;
+.top-\[50px\] {
+  top: 50px;
 }
 
-.top-8 {
-  top: 2rem;
+.left-\[\] {
+  left: ;
+}
+
+.left-\[250px\] {
+  left: 250px;
+}
+
+.left-\[205\] {
+  left: 205;
+}
+
+.left-\[255px\] {
+  left: 255px;
+}
+
+.left-\[16r\] {
+  left: 16r;
+}
+
+.left-\[254px\] {
+  left: 254px;
 }
 
 .z-10 {
@@ -659,52 +667,32 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mt-14 {
-  margin-top: 3.5rem;
-}
-
-.mt-24 {
-  margin-top: 6rem;
-}
-
-.mt-12 {
-  margin-top: 3rem;
+.me-4 {
+  margin-inline-end: 1rem;
 }
 
 .mt-11 {
   margin-top: 2.75rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .mt-2 {
   margin-top: 0.5rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.mt-4 {
+  margin-top: 1rem;
 }
 
-.ml-4 {
-  margin-left: 1rem;
-}
-
-.me-4 {
-  margin-inline-end: 1rem;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .block {
@@ -747,16 +735,12 @@ video {
   height: 100%;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
-.h-\[226px\] {
-  height: 226px;
-}
-
 .min-h-\[600px\] {
   min-height: 600px;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .w-14 {
@@ -791,21 +775,13 @@ video {
   width: 100%;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-1\/5 {
-  width: 20%;
-}
-
 .min-w-max {
   min-width: -moz-max-content;
   min-width: max-content;
+}
+
+.max-w-\[1170px\] {
+  max-width: 1170px;
 }
 
 .max-w-\[1340px\] {
@@ -814,14 +790,6 @@ video {
 
 .max-w-\[280px\] {
   max-width: 280px;
-}
-
-.max-w-\[1160px\] {
-  max-width: 1160px;
-}
-
-.max-w-\[1170px\] {
-  max-width: 1170px;
 }
 
 .rotate-180 {
@@ -847,48 +815,12 @@ video {
   resize: both;
 }
 
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
-.grid-cols-12 {
-  grid-template-columns: repeat(12, minmax(0, 1fr));
-}
-
-.grid-cols-5 {
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
-.grid-cols-6 {
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
-.grid-cols-8 {
-  grid-template-columns: repeat(8, minmax(0, 1fr));
-}
-
-.grid-rows-5 {
-  grid-template-rows: repeat(5, minmax(0, 1fr));
-}
-
-.grid-rows-1 {
-  grid-template-rows: repeat(1, minmax(0, 1fr));
-}
-
 .flex-col {
   flex-direction: column;
-}
-
-.place-content-between {
-  place-content: space-between;
 }
 
 .place-items-center {
@@ -933,22 +865,6 @@ video {
 
 .scroll-smooth {
   scroll-behavior: smooth;
-}
-
-.whitespace-nowrap {
-  white-space: nowrap;
-}
-
-.whitespace-pre-line {
-  white-space: pre-line;
-}
-
-.whitespace-pre-wrap {
-  white-space: pre-wrap;
-}
-
-.whitespace-break-spaces {
-  white-space: break-spaces;
 }
 
 .rounded-3xl {
@@ -999,6 +915,11 @@ video {
   background-color: rgb(45 47 49 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#f7f9fa\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 249 250 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#fff\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1012,11 +933,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#f7f9fa\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 249 250 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -1036,24 +952,8 @@ video {
   padding: 1.5rem;
 }
 
-.p-14 {
-  padding: 3.5rem;
-}
-
-.p-16 {
-  padding: 4rem;
-}
-
-.p-9 {
-  padding: 2.25rem;
-}
-
 .p-8 {
   padding: 2rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
 }
 
 .px-1 {
@@ -1091,11 +991,6 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -1108,20 +1003,13 @@ video {
   text-align: center;
 }
 
-.align-middle {
-  vertical-align: middle;
-}
-
-.align-bottom {
-  vertical-align: bottom;
-}
-
-.align-text-top {
-  vertical-align: text-top;
-}
-
 .font-SusseWorks {
   font-family: SusseWorks;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
@@ -1137,39 +1025,13 @@ video {
   font-size: 16px;
 }
 
-.text-\[20px\] {
-  font-size: 20px;
+.text-\[18\.8px\] {
+  font-size: 18.8px;
 }
 
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-\[18px\] {
-  font-size: 18px;
-}
-
-.text-\[18\.5px\] {
-  font-size: 18.5px;
-}
-
-.text-\[19\.5px\] {
-  font-size: 19.5px;
-}
-
-.text-\[18\.8px\] {
-  font-size: 18.8px;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -1188,45 +1050,8 @@ video {
   line-height: 1.5rem;
 }
 
-.tracking-tight {
-  letter-spacing: -0.025em;
-}
-
-.tracking-\[\] {
-  letter-spacing: ;
-}
-
-.tracking-\[0\.4\] {
-  letter-spacing: 0.4;
-}
-
-.tracking-\[0\.42\] {
-  letter-spacing: 0.42;
-}
-
-.tracking-\[\.2\] {
-  letter-spacing: .2;
-}
-
-.tracking-\[\.9\] {
-  letter-spacing: .9;
-}
-
-.tracking-\[\.9px\] {
-  letter-spacing: .9px;
-}
-
-.tracking-\[-\.9px\] {
-  letter-spacing: -.9px;
-}
-
 .tracking-\[-\.2px\] {
   letter-spacing: -.2px;
-}
-
-.\!text-liColor {
-  --tw-text-opacity: 1 !important;
-  color: rgb(45 47 49 / var(--tw-text-opacity)) !important;
 }
 
 .text-\[\#2D2F31\] {
@@ -1247,6 +1072,10 @@ video {
 .text-\[\#6a6f73\] {
   --tw-text-opacity: 1;
   color: rgb(106 111 115 / var(--tw-text-opacity));
+}
+
+.text-\[\#6a6f73f3\] {
+  color: #6a6f73f3;
 }
 
 .text-\[\#fff\] {
@@ -1282,27 +1111,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.\!text-disableColor {
-  --tw-text-opacity: 1 !important;
-  color: rgb(106 111 115 / var(--tw-text-opacity)) !important;
-}
-
-.text-\[18\.px\] {
-  color: 18.px;
-}
-
-.text-\[\#6a6f73cc\] {
-  color: #6a6f73cc;
-}
-
-.text-\[\#6a6f73e1\] {
-  color: #6a6f73e1;
-}
-
-.text-\[\#6a6f73f3\] {
-  color: #6a6f73f3;
 }
 
 .shadow-dropDownBox {
@@ -1369,13 +1177,21 @@ video {
 }
 
 @font-face {
-  font-family: SusseWorks ;
+  font-family: SusseWorks;
 
   src: url(../public/Fonts/SuisseWorks-Bold-v1.woff2);
 }
 
-.PopDown{
-  animation: PopDown 1s ;
+.showliwrapper:hover  .showli {
+  display: block !important;
+}
+
+.showlimiddle:hover .showlastli{
+  display: block !important;
+}
+
+.PopDown {
+  animation: PopDown 1s;
 }
 
 @keyframes PopDown {
@@ -1388,16 +1204,6 @@ video {
   }
 }
 
-.placeholder\:text-liColor::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(45 47 49 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-liColor::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(45 47 49 / var(--tw-text-opacity));
-}
-
 .placeholder\:text-\[\#6a6f73\]::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(106 111 115 / var(--tw-text-opacity));
@@ -1406,14 +1212,6 @@ video {
 .placeholder\:text-\[\#6a6f73\]::placeholder {
   --tw-text-opacity: 1;
   color: rgb(106 111 115 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-\[\#6a6f73d7\]::-moz-placeholder {
-  color: #6a6f73d7;
-}
-
-.placeholder\:text-\[\#6a6f73d7\]::placeholder {
-  color: #6a6f73d7;
 }
 
 .hover\:cursor-not-allowed:hover {
@@ -1485,40 +1283,11 @@ video {
     visibility: visible;
   }
 
-  .sm\:absolute {
-    position: absolute;
-  }
-
-  .sm\:relative {
-    position: relative;
-  }
-
-  .sm\:top-0 {
-    top: 0px;
-  }
-
-  .sm\:left-0 {
-    left: 0px;
-  }
-
   .sm\:line-clamp-1 {
     overflow: hidden;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
-  }
-
-  .sm\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .sm\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .sm\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 }
 
@@ -1529,32 +1298,12 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:absolute {
-    position: absolute;
-  }
-
-  .md\:relative {
-    position: relative;
-  }
-
-  .md\:top-10 {
-    top: 2.5rem;
-  }
-
-  .md\:left-16 {
-    left: 4rem;
-  }
-
   .md\:flex {
     display: flex;
   }
 
   .md\:hidden {
     display: none;
-  }
-
-  .md\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .md\:justify-normal {
@@ -1596,23 +1345,11 @@ video {
   .lg\:grid-cols-8 {
     grid-template-columns: repeat(8, minmax(0, 1fr));
   }
-
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
 }
 
 @media (min-width: 1200px) {
   .min-\[1200px\]\:top-16 {
     top: 4rem;
-  }
-
-  .min-\[1200px\]\:top-14 {
-    top: 3.5rem;
-  }
-
-  .min-\[1200px\]\:top-12 {
-    top: 3rem;
   }
 
   .min-\[1200px\]\:w-\[440px\] {
@@ -1623,9 +1360,5 @@ video {
 @media (min-width: 1280px) {
   .xl\:block {
     display: block;
-  }
-
-  .xl\:grid-cols-8 {
-    grid-template-columns: repeat(8, minmax(0, 1fr));
   }
 }
