Added toast functionality on product remove, refactored code, updated imports, added some comments, and fixed some bugs.

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -7,6 +7,10 @@
     src: url(../public/Fonts/SuisseWorks-Bold-v1.woff2);
 }
 
+.ringtoneActive{
+    @apply border-b-liColor text-activeButton
+}
+
 body {
     @apply overflow-x-hidden;
 }
